// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Execute deployment to Azure. Final step after preparation and validation. Runs azd up, azd deploy, or infrastructure provisioning commands.
USE FOR: run azd up, run azd deploy, execute deployment, provision infrastructure, push to production, go live, ship it, deploy web app, deploy container app, deploy static site, deploy Azure Functions, bicep deploy, terraform apply.
DO NOT USE FOR: creating or building apps (use azure-prepare), validating before deploy (use azure-validate).
",
  "extractedKeywords": [
    "after",
    "apply",
    "apps",
    "azure",
    "azure-prepare",
    "azure-validate",
    "before",
    "bicep",
    "building",
    "cli",
    "commands",
    "container",
    "creating",
    "deploy",
    "deployment",
    "execute",
    "final",
    "function",
    "functions",
    "identity",
    "infrastructure",
    "live",
    "mcp",
    "preparation",
    "production",
    "provision",
    "provisioning",
    "push",
    "runs",
    "ship",
    "site",
    "static",
    "step",
    "terraform",
    "validating",
    "validation",
  ],
  "name": "azure-deploy",
}
`;

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "after",
  "apply",
  "apps",
  "azure",
  "azure-prepare",
  "azure-validate",
  "before",
  "bicep",
  "building",
  "cli",
  "commands",
  "container",
  "creating",
  "deploy",
  "deployment",
  "execute",
  "final",
  "function",
  "functions",
  "identity",
  "infrastructure",
  "live",
  "mcp",
  "preparation",
  "production",
  "provision",
  "provisioning",
  "push",
  "runs",
  "ship",
  "site",
  "static",
  "step",
  "terraform",
  "validating",
  "validation",
]
`;
